Add compression ratio benchmarks
Fix sorting of the features

Refactor tests in MltDecoderTest class